# tm

./: .gitignore  Cargo.toml  flake.nix
.claude/skills/tm-runtime-verifier/: SKILL.md
crates/core/: Cargo.toml
crates/core/src/: activity.rs  idle.rs  lib.rs  session.rs
crates/core/tests/: sessionization.rs  workspace_smoke.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: app.rs  ipc_server.rs  lib.rs  main.rs  query.rs  session_service.rs
crates/daemon/tests/: ipc_server.rs  query_service.rs  runtime_shutdown.rs  session_service.rs  settings_query.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs  messages.rs  socket.rs
crates/ipc/tests/: message_roundtrip.rs  socket_path.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  repository.rs  schema.rs
crates/storage/tests/: file_repository.rs  settings_repository.rs  sqlite_repository.rs
crates/tracker/: Cargo.toml
crates/tracker/src/: idle.rs  lib.rs  niri.rs
crates/tracker/tests/: focus_polling.rs  niri_mapping.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  client.rs  design.rs  format.rs  lib.rs  main.rs  state.rs
crates/ui/tests/: app_state.rs  apps_page.rs
docs/superpowers/plans/: 2026-04-12-runtime-integration-closure.md  2026-04-12-tai-like-niri-tracker.md  2026-04-13-duration-display-formatting.md  2026-04-13-gui-daemon-ipc-read-path.md  2026-04-13-tm-runtime-verifier-skill.md
docs/superpowers/specs/: 2026-04-12-tai-like-niri-time-tracker-product-spec.md  (+2 more)
scripts/: screenshot-ui.sh
src/: main.rs
tasks/: prd-tai-like-niri-time-tracker.md
(+21 files in other folders)
